# tuuziane

./: .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  create_categories.py  create_product_attributes.py  manage.py  mypy.ini  package.json  pyproject.toml  pytest.ini  requirements.txt  ruff.toml  start_backend_dev  start_frontend_dev  test-results.xml  tox.ini
.github/workflows/: ci.yml
apps/catalogue/: __init__.py  apps.py  views.py
apps/catalogue/migrations/: 0001_initial.py  0002_auto_20150217_1221.py  0003_data_migration_slugs.py  0004_auto_20150217_1710.py  0005_auto_20150604_1450.py  0006_auto_20150807_1725.py  0007_auto_20151207_1440.py  0008_auto_20160304_1652.py  0009_slugfield_noop.py  0010_auto_20170420_0439.py  0011_auto_20170422_1355.py  0013_auto_20170821_1548.py  0014_auto_20181115_1953.py  0016_auto_20190327_0757.py  0017_auto_20190816_0938.py  0018_auto_20191220_0920.py  0020_auto_20200801_0817.py  0021_auto_20201005_0844.py  0022_auto_20210210_0539.py  0023_auto_20210824_1414.py  0024_remove_duplicate_attributes.py  0025_attribute_code_uniquetogether_constraint.py  0026_predefined_product_options.py  0027_attributeoption_code_attributeoptiongroup_code_and_more.py
apps/core/: utils.py  views.py
docker/: Dockerfile
fixtures/: auth.json
homepage/templates/homepage/: index_page.html
src/: create_product_attributes.py
src/apps/catalogue/migrations/: 0004_auto_20150217_1710.py  0008_auto_20160304_1652.py  0010_auto_20170420_0439.py  0015_product_is_public.py  0024_remove_duplicate_attributes.py
src/apps/catalogue/templatetags/: range_filter.py
src/frontend/: .env.example  README.md  index.html  package.json  vite.config.js  webpack.config.js
src/frontend/src/: App.vue  basket.js  catalogue.js  home.js  homepage.js  main.js  registration.js
src/frontend/src/components/Basket/: BasketApp.vue  ShoppingCart.vue
src/frontend/src/components/Catalogue/: ProductList.vue  ProductPrice.vue
src/frontend/src/components/General/: Filters.vue  Pagination.vue
src/frontend/src/components/Homepage/: HeroBlock.vue
src/frontend/src/components/ProductFilter/: ProductFilter.vue
src/frontend/src/components/Registration/: Login.vue  Register.vue  RegistrationApp.vue
src/frontend/src/composables/: useBasket.js
src/frontend/src/utils/: pagination.js
src/homepage/: models.py
src/tuuziane/: urls.py  wsgi.py
src/tuuziane/apps/catalogue/: abstract_models.py  admin.py  apps.py  models.py  serializers.py  urls.py  views.py
src/tuuziane/apps/catalogue/migrations/: 0001_initial.py  0006_auto_20150807_1725.py  0011_auto_20170422_1355.py  0012_auto_20170609_1902.py  0019_option_required.py  0023_auto_20210824_1414.py  0024_remove_duplicate_attributes.py  0026_predefined_product_options.py  0028_product_code_product_priority.py  0029_category_shop_product_shop.py
src/tuuziane/apps/catalogue/templatetags/: range_filter.py
src/tuuziane/apps/core/: pagination.py  serializers.py  utils.py  views.py
src/tuuziane/apps/homepage/: apps.py  blocks.py  models.py
src/tuuziane/apps/homepage/migrations/: 0001_initial.py  0002_homepage_delete_indexpage.py
src/tuuziane/apps/homepage/templates/blocks/: featured_products_block.html  hero_block.html
src/tuuziane/apps/shops/: admin.py  apps.py  models.py
src/tuuziane/apps/shops/migrations/: 0001_initial.py
src/tuuziane/config/: env.py  settings.py  test_settings.py  vue_env.py
src/tuuziane/core/: __init__.py  apps.py  views.py
src/tuuziane/core/management/commands/: upgrade.py
src/tuuziane/scripts/: create_categories.py  create_product_attributes.py
src/tuuziane/settings/: base.py  dev.py  production.py  test.py
src/tuuziane/templates/: 404.html  base.html
src/tuuziane/templates/account/: login.html  logout.html  signup.html
src/tuuziane/templates/components/: mobile-menu.html  photoswipe.html  quickview-modal.html  site__footer.html  site__header.html  site__mobile-header.html
src/tuuziane/templates/core/: about.html  contact.html
src/tuuziane/templates/flatpages/: default.html
src/tuuziane/templates/homepage/: home_page.html  index_page.html
src/tuuziane/templates/oscar/catalogue/: browse.html  category.html
src/tuuziane/templates/oscar/catalogue/partials/: product.html
src/tuuziane/utils/: wagtail_utils.py
staticfiles/css/: style.header-classic-variant-five.css  style.header-classic-variant-four.css  style.header-classic-variant-one.css  style.header-classic-variant-three.css  style.header-classic-variant-two.css  style.header-spaceship-variant-three.css  style.header-spaceship-variant-two.css  style.mobile-header-variant-two.css
tests/: conftest.py
tests/apps/catalogue/: test_views.py
tests/apps/homepage/: test_models.py  test_views.py
tests/common/: test_migrations.py
tuuziane/: context_processors.py  urls.py  wsgi.py
tuuziane/settings/: base.py  dev.py
tuuziane/templates/: base.html  header-spaceship-variant-one.html
tuuziane/templates/components/: add-vehicle-modal.html  mobile-menu.html  photoswipe.html  site__body.html  site__footer.html  site__header.html  site__mobile-header.html  vehicle-picker-modal.html
tuuziane/templates/homepage/: index_page.html
tuuziane/templates/oscar/catalogue/: browse.html  categories.html  category.html  product.html
tuuziane/templates/oscar/catalogue/partials/: product.html
tuuziane_front/: README.md  index.html  package.json
tuuziane_front/src/: App.vue  main.js
tuuziane_front/src/assets/: base.css  main.css
tuuziane_front/src/components/: Home.vue
tuuziane_front/src/components/utils/: Header.vue
tuuziane_front/src/router/: index.js
tuuziane_front/src/views/Home/: HomeView.vue
vue-tuuziane/: index.html  package.json  webpack.config.js
vue-tuuziane/src/: App.vue  catalogue.js  home.js  main.js
vue-tuuziane/src/components/Catalogue/: CatalogueApp.vue  Filters.vue  ProductList.vue  ProductPrice.vue
vue-tuuziane/src/components/Registration/: RegistrationApp.vue
vue-tuuziane/src/modules/: Home.vue
